--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "type": "git",
     "url": "git@github.com:bu-bu/angular-shopping-cart.git"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "grunt": "~0.4.1",
     "grunt-recess": "~0.3.0",
     "grunt-contrib-clean": "~0.4.1",
@@ -30,6 +29,7 @@
     "grunt-coffeelint": "0.0.6",
     "grunt-conventional-changelog": "~0.1.1",
     "grunt-bump": "0.0.6",
-    "connect-modrewrite": "^0.6.4-pre"
+    "connect-modrewrite": "^0.6.4-pre",
+    "grunt-connect-proxy": "^0.1.10"
   }
 }
