--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "url": "git@github.com:bu-bu/angular-shopping-cart.git"
   },
   "dependencies": {
+    "express": "3.1.x",
+    "bower": "1.2.x",
     "grunt": "~0.4.1",
     "grunt-recess": "~0.3.0",
     "grunt-contrib-clean": "~0.4.1",
