--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "grunt-bump": "0.0.6",
     "connect-modrewrite": "^0.6.4-pre",
     "grunt-connect-proxy": "^0.1.10"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install; ./node_modules/grunt-cli/bin/grunt heroku"
   }
 }
