--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "grunt-conventional-changelog": "~0.1.1",
     "grunt-bump": "0.0.6",
     "connect-modrewrite": "^0.6.4-pre",
-    "grunt-connect-proxy": "^0.1.10"
+    "grunt-connect-proxy": "^0.1.10",
+    "grunt-cli": "^0.1.13"
   },
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install; ./node_modules/grunt-cli/bin/grunt prod"
