--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "git@github.com:bu-bu/angular-shopping-cart.git"
   },
+  "engines": {
+    "node": "0.10.x"
+  },
   "dependencies": {
     "express": "3.1.x",
     "bower": "1.2.x",
