--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,9 @@
   "name": "ngbp",
   "version": "0.0.1",
   "dependencies": {
-    "jquery": "~1.8.0",
+    "jquery": ">= 1.9.0",
     "angular": "1.2.0-rc.2",
-    "bootstrap": "~2.3.2",
+    "bootstrap": "~3.1.1",
     "angular-bootstrap": "~0.3.0",
     "angular-cookies": "~1.0.7",
     "angular-ui-router": "~0.2.8",
