--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,8 @@ node_js:
   - "0.10"
 
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
   - npm install --quiet -g grunt-cli karma bower
   - bower install
 
-script: grunt
+script: grunt prod
 
