Revert "Heroku: npm i"
This reverts commit a2dc2dbd438dbfc8b8de3d4f5a47aa7c98d69f9a.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "grunt-cli": "^0.1.13"
   },
   "scripts": {
-    "postinstall": "npm i; ./node_modules/bower/bin/bower install; ./node_modules/grunt-cli/bin/grunt prod"
+    "postinstall": "./node_modules/bower/bin/bower install; ./node_modules/grunt-cli/bin/grunt prod"
   }
 }
