--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "grunt-bump": "0.0.6",
     "connect-modrewrite": "^0.6.4-pre",
     "grunt-connect-proxy": "^0.1.10",
-    "grunt-cli": "^0.1.13"
+    "grunt-cli": "^0.1.13",
+    "phantomjs": "1.9.2-1"
   },
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install; ./node_modules/grunt-cli/bin/grunt prod"
