--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "connect-modrewrite": "^0.6.4-pre",
     "grunt-connect-proxy": "^0.1.10",
     "grunt-cli": "^0.1.13",
-    "phantomjs": "1.9.2-1"
+    "phantomjs": "~1.9.2-1"
   },
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install; ./node_modules/grunt-cli/bin/grunt prod"
