--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "dependencies": {
     "express": "3.1.x",
-    "bower": "1.2.x",
-    "grunt": "~0.4.1",
-    "grunt-recess": "~0.3.0",
+    "bower": "~1.2.8",
+    "grunt": "~0.4.5",
+    "grunt-recess": "~0.3.5",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jshint": "~0.4.3",
