--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "grunt-bump": "0.0.6",
     "connect-modrewrite": "^0.6.4-pre",
     "grunt-connect-proxy": "^0.1.10",
-    "grunt-cli": "^0.1.13",
+    "grunt-cli": "^0.1.13"
+  },
+  "peerDependencies": {
     "phantomjs": "~1.9.12"
   },
   "scripts": {
