--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
 - '0.10'
+cache:
+  directories:
+  - node_modules
+  - vendor
 before_script:
 - npm install
 script: bash ./deploy.sh
