travis: add before_install

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache:
   - vendor
 before_script:
 - npm install
+- ./node_modules/.bin/bower install
+- ./node_modules/.bin/grunt prod
 script: bash ./deploy.sh
 env:
   global:
